# EquivSVT

./: .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  faq.rst  index.rst  installation.rst  kernels.rst  quickstart.rst  theory.rst
docs/api/: detector.rst  detector_fft.rst  fft.rst  index.rst  kernels.rst  statistics.rst  utils.rst
quadsv/: __init__.py  detector.py  detector_fft.py  fft.py  kernels.py  statistics.py  utils.py
tests/: test_detector.py  test_detector_fft.py  test_fft.py  test_kernels.py  test_statistics.py  test_tutorials.py  test_utils.py
